deployments/default/radarr/radarr-api-ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "external"
  labels:
    app.kubernetes.io/instance: radarr
    app.kubernetes.io/name: radarr
  name: radarr-api
spec:
  rules:
  - host: "radarr.devbu.io"
    http:
      paths:
      - backend:
          serviceName: radarr
          servicePort: http
        path: /api
  tls:
  - hosts:
    - "radarr.devbu.io"
